Fix minor layout issue with right column.

--- a/css/default.css
+++ b/css/default.css
@@ -42,7 +42,7 @@ body {
 	position: absolute;
 	right: 0px;
 	top: 10px;
-	width: 220px;
+	width: 240px;
 }
 
 h1 {
